# sports-management-system-legacy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIRECT_PUBLICATION_STATUS.md  LICENSE.md  README.md  RELEASE_NOTES.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  modernization_task.yml
.github/workflows/: bootstrap-import-issue.yml  bootstrap-import-v2.yml  bootstrap-import-v3.yml  bootstrap-import-v4.yml  bootstrap-import.yml  cmake.yml
docs/: FINAL_IMPORT_READY.md  FINAL_IMPORT_TRIGGER.md  IMPORT_TRIGGER_READY.md  IMPORT_TRIGGER_READY_2.md  PUBLICATION_TRIGGER_NOTE.md  WORKFLOW_PERMISSION_SPLIT.md  _config.yml  index.md
docs/analysis/: OOP_assignment.txt  TECHNICAL_ASSESSMENT.md  UAT_feedback.txt  checksums.txt
docs/architecture/: ADR-0001-preserve-and-modernize.md  BACKUP_RESTORE_FLOW.md  COMPONENT_ARCHITECTURE.md  DOMAIN_MODEL.md  MUTATION_SEQUENCE.md  PRESERVATION_BOUNDARY.md  README.md
docs/governance/: GITHUB_PUBLICATION_MANIFEST.md  PORTFOLIO_SETTINGS.md  PROVENANCE_AND_ATTRIBUTION.md  PUBLICATION_COMPLETE.md  V0.11.0_INCREMENT_STATUS.md  V0.11.0_VALIDATION_2.md  V0.11.0_VALIDATION_TRIGGER_2.md
docs/modernization/: BACKUP_RESTORE_AND_EXPORT.md  CLI_UAT_MAPPING.md  ISSUE_SEED.md  MIGRATION_BACKLOG.md  REPORTING_AND_DATA_QUALITY.md  REQUIREMENTS_TRACEABILITY_MATRIX.md  STATISTICS_AND_MVP.md  V0.11.0_INCREMENT_1.md  V0.11.0_INCREMENT_1_VALIDATION.md  V0.11.0_INCREMENT_2.md  V0.11.0_NEXT.md  V0.11.0_ROADMAP.md
docs/operations/: INSTALLATION_AND_PACKAGING.md  RELEASE_READINESS_CHECKLIST.md  V0.11.0_RELEASE_CHECKLIST.md
legacy-source/: sms.cpp  sms1.cpp  sms2.cpp  sms3.cpp
mail-discovery/: SEARCH_LOG.md
modern/: CMakeLists.txt
modern/include/sms/: csv_match_repository.hpp  csv_member_repository.hpp  csv_performance_repository.hpp  csv_support.hpp  csv_team_repository.hpp  data_management.hpp  in_memory_match_repository.hpp  in_memory_member_repository.hpp  in_memory_team_repository.hpp  match.hpp  match_repository.hpp  member.hpp  performance.hpp  performance_repository.hpp  repository.hpp  sports_service.hpp  team.hpp  team_repository.hpp
modern/sample-data/: matches.csv  members.csv  statistics.csv  teams.csv
modern/src/: csv_match_repository.cpp  csv_member_repository.cpp  csv_performance_repository.cpp  csv_support.cpp  csv_team_repository.cpp  data_management.cpp  in_memory_match_repository.cpp  in_memory_member_repository.cpp  in_memory_team_repository.cpp  main.cpp  sports_service.cpp
modern/tests/: csv_member_repository_test.cpp  csv_team_match_repository_test.cpp  data_management_test.cpp  member_repository_test.cpp  reporting_test.cpp  sports_service_test.cpp  statistics_mvp_test.cpp
scripts/: demo.sh  validate.sh
(+3 files in other folders)
